--- a/foundations/intro-to-css/01-css-methods/index.html
+++ b/foundations/intro-to-css/01-css-methods/index.html
@@ -12,6 +12,7 @@
         font-size: 18px;
       }
     </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <div>Style me via the external method!</div>
